fix: 修复3个BUG 1.修复折叠卡片折叠后会导致下方内容无法点击的问题 2.修复 shell_exec 被禁用的问题 3.修复 wrapText 函数逻辑导致有时候点击按钮没反应

--- a/Modules/Card/index.scss
+++ b/Modules/Card/index.scss
@@ -67,6 +67,7 @@
       padding-bottom: 0;
       border-bottom: 0;
       opacity: 0;
+      overflow: hidden;
     }
   }
 }
